# teamsc2

./: README.md  TeamsExternalC2.py
teamsc2/: Cargo.toml
teamsc2/src/: auth.rs  config.rs  lib.rs  main.rs  named_pipes.rs  teamsc2.rs  teamsclient.rs
