[package]
name = "teamsc2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "time"] }
# Configure reqwest with rustls instead of native-tls
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Pipes", "Win32_Foundation", "Win32_Storage_FileSystem"] }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units
strip = true        # Strip symbols from binary
panic = 'abort'     # Remove panic unwinding code
debug = false       # No debug symbols
debug-assertions = false  # No debug assertions
incremental = false      # Disable incremental compilation
rpath = false           # Disable rpath
overflow-checks = false # Disable overflow checks

[target.x86_64-pc-windows-msvc]
